--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/jmnghn/TypeScript-all-in-one-part2#readme",
   "dependencies": {
+    "axios": "^1.1.3",
     "jquery": "^3.6.1"
   },
   "devDependencies": {
