--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   "homepage": "https://github.com/jmnghn/TypeScript-all-in-one-part2#readme",
   "dependencies": {
     "axios": "^1.1.3",
-    "jquery": "^3.6.1"
+    "jquery": "^3.6.1",
+    "react": "^18.2.0"
   },
   "devDependencies": {
-    "@types/jquery": "^3.5.14"
+    "@types/jquery": "^3.5.14",
+    "@types/react": "^18.0.24"
   }
 }
