--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "dependencies": {
     "axios": "^1.1.3",
     "jquery": "^3.6.1",
-    "react": "^18.2.0"
+    "react": "^18.2.0",
+    "redux": "^4.2.0",
+    "typescript": "^4.8.4"
   },
   "devDependencies": {
     "@types/jquery": "^3.5.14",
