--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jquery": "^3.6.1",
     "react": "^18.2.0",
     "redux": "^4.2.0",
+    "redux-thunk": "^2.4.2",
     "typescript": "^4.8.4"
   },
   "devDependencies": {
