--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
   "homepage": "https://github.com/jmnghn/TypeScript-all-in-one-part2#readme",
   "dependencies": {
     "axios": "^1.1.3",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.6",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "jquery": "^3.6.1",
+    "passport": "^0.6.0",
     "react": "^18.2.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0",
@@ -27,7 +32,13 @@
     "typescript": "^4.8.4"
   },
   "devDependencies": {
+    "@types/connect-flash": "^0.0.37",
+    "@types/cookie-parser": "^1.4.3",
+    "@types/express": "^4.17.14",
+    "@types/express-session": "^1.17.5",
     "@types/jquery": "^3.5.14",
+    "@types/node": "^18.11.9",
+    "@types/passport": "^1.0.11",
     "@types/react": "^18.0.24"
   }
 }
